# Echohive_ESP32

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.github/: copilot-instructions.md
main/: CMakeLists.txt  app_main.c
main/certs/: certificate.pem.crt  private.pem.key
